working version of tehn site

--- a/portfolio/projects/templates/projects/projects.html
+++ b/portfolio/projects/templates/projects/projects.html
@@ -1,9 +1,6 @@
 {% extends "base.html"%}
 {% load static %}
-{% block title %}
-<head>
-    <p>Projects</p>
-</head>
+{% block title %}Projects
 {% endblock %}
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'projects/projects.css' %}">
