--- a/portfolio/projects/static/projects/projects.css
+++ b/portfolio/projects/static/projects/projects.css
@@ -1,18 +1,23 @@
 .project-card
 {
+  display: flex;
+  flex-direction: column;
   flex: 0 1 19rem;           
-  height: 30rem;             
+  height: 100%;             
   border: 1px solid #ccc;
   border-radius: 0.5rem;
   padding: 1rem;
   box-shadow: 0 4px 12px rgba(0,0,0,.2);
   color: white;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 .project-container
 {
-  display: flex;
-  flex-wrap: wrap;          
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));          
   gap: 2rem;                
-  justify-content: flex-start;
+  margin-bottom: 2rem;
+
 }
